--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,7 +14,7 @@
   }
 
   .btn {
-    @apply bg-primaryColor py-[15px] px-[35px] rounded-[10px] text-whiteColor font-[800] mt-[38px] ;
+    @apply bg-primaryColor hover:opacity-80 py-[15px] px-[35px] rounded-[10px] text-white font-[800] ;
   }
 
   .heading {
@@ -22,7 +22,7 @@
   }
 
   .text__para {
-    @apply text-[18px] leading-[30px] font-[400] mt-[1rem];
+    @apply text-[18px] leading-[20px] font-[400] mt-[1rem];
   }
 
   .header {
@@ -47,5 +47,8 @@
 
   .text_para {
     @apply text-[16px] leading-7 mt-3;
+  }
+  .show__menu {
+    @apply block;
   }
 }
