--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,16 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap");
 
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-body{
-  font-family: 'Manrope', sans-serif;
+body {
+  font-family: "Manrope", sans-serif;
 }
 
-.sticky__header{
+.sticky__header {
   width: 100%;
   height: 80px;
   line-height: 80px;
@@ -19,6 +19,8 @@ body{
   left: 0;
   z-index: 100;
 }
+
+/* Add this to your global styles or Tailwind CSS configuration */
 
 @media only screen and (max-width: 770px) {
   .navigation {
@@ -45,9 +47,7 @@ body{
     transform: translateX(100%);
     transition: 0.5s;
 
-  
     color: white;
-
   }
 
   .show__menu .menu {
