--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,7 +14,7 @@
   }
 
   .btn {
-    @apply bg-primaryColor hover:opacity-80 py-[15px] px-[35px] rounded-[10px] text-white font-[800] ;
+    @apply bg-primaryColor hover:bg-red-700 py-[15px] px-[35px] rounded-[10px] text-white font-[800];
   }
 
   .heading {
@@ -30,17 +30,17 @@
   }
 
   .hero__section {
-    @apply bg-[url('./src/assets/images/login.jpg')] bg-no-repeat bg-cover bg-bottom  ;
+    @apply bg-[url('./src/assets/images/login.jpg')] bg-no-repeat bg-cover bg-bottom;
   }
 
-  .form__label{
-    @apply text-black font-semibold text-[16px] leading-7 mb-2
+  .form__label {
+    @apply text-black font-semibold text-[16px] leading-7 mb-2 ml-2;
   }
 
-  .form__input{
-    @apply w-full px-4 py-3 border border-solid border-gray-200 focus:outline-none
-    focus:border-primaryColor text-[16px] leading-7 text-grayColor placeholder:text-gray-500
-    cursor-pointer rounded-md
+  .form__input {
+    @apply bg-[#F5F5F5] w-full px-5 py-3 border border-solid border-gray-200 focus:outline-none
+    focus:border-primaryColor text-[16px] leading-7 text-black placeholder:text-gray-500
+    cursor-pointer rounded-lg;
   }
 }
 
