--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -30,7 +30,7 @@
   }
 
   .hero__section {
-    @apply bg-[url('./src/assets/images/login.jpg')] bg-no-repeat bg-cover bg-bottom;
+    @apply bg-[url('./src/assets/images/login.jpeg')] bg-no-repeat bg-cover bg-bottom;
   }
 
   .form__label {
